--- a/index.html
+++ b/index.html
@@ -419,22 +419,23 @@
                                 <ul class="navbar-nav site-menu" style="margin-right: 16px;">
                                     <li id="menu-item-1"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1">
-                                        <a href="https://home.mahaofei.com">
+                                        <a href="https://www.mahaofei.com/homepage">
                                             <i class="iconfont icon-zhuye1 fa-lg mr-2"></i>
                                             <span>主页</span></a>
                                     </li>
                                     <li id="menu-item-2"
-                                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2"><a
-                                            target="_blank" rel="noopener" href="https://nav.mahaofei.com">
-                                            <i class="iconfont icon-safari fa-lg mr-2"></i>
-                                            <span>导航</span></a></li>
+                                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2">
+                                        <a href="https://www.mahaofei.com" one-link-mark="yes">
+                                            <i class="iconfont icon-blog fa-lg mr-2"></i>
+                                            <span>博客</span></a>
+                                    </li>
 
                                     <!-- <li id="menu-item-3" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-3"> -->
                                     <li id="menu-item-3"
                                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-3">
-                                        <a href="https://www.mahaofei.com" one-link-mark="yes">
-                                            <i class="iconfont icon-blog fa-lg mr-2"></i>
-                                            <span>博客</span></a>
+                                        <a target="_blank" rel="noopener" href="https://www.mahaofei.com/academic">
+                                            <i class="iconfont icon-zhishi-tianchong fa-lg mr-2"></i>                                                
+                                            <span>学术</span></a>
                                         <!-- <ul class="sub-menu">
                                             <li id="menu-item-264"
                                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-264">
@@ -447,10 +448,11 @@
                                         </ul> -->
                                     </li>
                                     <li id="menu-item-4"
-                                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4"><a
-                                            target="_blank" rel="noopener" href="https://academic.mahaofei.com">
-                                            <i class="iconfont icon-zhishi-tianchong fa-lg mr-2"></i>
-                                            <span>学术</span></a></li>
+                                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4">
+                                        <a target="_blank" rel="noopener" href="https://www.mahaofei.com/navigation">
+                                            <i class="iconfont icon-safari fa-lg mr-2"></i>
+                                            <span>导航</span></a>
+                                    </li>
 
                                 </ul>
                                 <div class="rounded-circle weather">
@@ -2831,10 +2833,10 @@
                 </h4>
                 <div class="friendlink text-xs card">
                     <div class="card-body">
-                        <a href="https://home.mahaofei.com/" title="有范的导航网站" target="_blank">主页</a>
-                        <a href="https://nav.mahaofei.com/" title="软件安全与病毒分析前沿，丰富的技术版块" target="_blank">导航</a>
-                        <a href="https://www.mahaofei.com/" title="来吧，让世界再酷一点！" target="_blank">博客</a>
-                        <a href="https://academic.mahaofei.com/" title="致力打造好用的导航网站" target="_blank">学术</a>
+                        <a href="https://www.mahaofei.com/homepage" title="马浩飞丨主页 - 一个封面主页" target="_blank">主页</a>
+                        <a href="https://www.mahaofei.com/navigation" title="马浩飞丨导航 - 自定义导航页" target="_blank">导航</a>
+                        <a href="https://www.mahaofei.com/" title="马浩飞丨博客 - 进步无止境" target="_blank">博客</a>
+                        <a href="https://www.mahaofei.com/academic" title="马浩飞丨学术 - 个人学术简历" target="_blank">学术</a>
                         <!-- <a href="https://www.hifast.cn/" title="站在前方,为你导航" target="_blank">快导航</a>
                         <a href="https://video.bqrdh.com/" title="专业影视导航网站" target="_blank">不求人导航</a> -->
                         <a href="#" target="_blank" title="更多链接">更多链接</a>
