Update search bar

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                                             value="https://search.bilibili.com/all?keyword=" data-placeholder="Bilibili"><label
                                             for="type-bilibili"><span class="text-muted">Bilibili</span></label></li>
                                         <li><input hidden="" type="radio" name="type" id="type-x"
-                                            value="https://twitter.com/search?q=" data-placeholder="X-Twitter"><label
+                                            value="https://twitter.com/search?q=" data-placeholder="X (Twitter)"><label
                                             for="type-x"><span class="text-muted">X</span></label></li>
                                         <li><input hidden="" type="radio" name="type" id="type-youtube"
                                             value="https://www.youtube.com/results?search_query=" data-placeholder="Youtube"><label
@@ -636,9 +636,9 @@
                                     <li><input hidden="" type="radio" name="type" id="type-taobao"
                                             value="https://s.taobao.com/search?q=" data-placeholder="淘宝"><label
                                             for="type-taobao"><span class="text-muted">淘宝</span></label></li>
-                                    <li><input hidden="" type="radio" name="type" id="type-bing"
+                                    <li><input hidden="" type="radio" name="type" id="type-soupian"
                                             value="https://soupian.one/search?key=" data-placeholder="影视资源聚合搜索"><label
-                                            for="type-bing"><span class="text-muted">影视</span></label></li>
+                                            for="type-soupian"><span class="text-muted">影视</span></label></li>
                                     <!-- <li><input hidden="" type="radio" name="type" id="type-xiachufang"
                                             value="https://www.xiachufang.com/search/?keyword="
                                             data-placeholder="下厨房"><label for="type-xiachufang"><span
@@ -2975,9 +2975,9 @@
                                     <li><input hidden="" type="radio" name="type2" id="m_type-taobao"
                                             value="https://s.taobao.com/search?q=" data-placeholder="淘宝"><label
                                             for="m_type-taobao"><span class="text-muted">淘宝</span></label></li>
-                                    <li><input hidden="" type="radio" name="type2" id="m_type-bing"
+                                    <li><input hidden="" type="radio" name="type2" id="m_type-soupian"
                                             value="https://soupian.one/search?key=" data-placeholder="影视资源聚合搜索"><label
-                                            for="m_type-bing"><span class="text-muted">影视</span></label></li>
+                                            for="m_type-soupian"><span class="text-muted">影视</span></label></li>
                                 </ul>
                             </div>
 
