--- a/index.html
+++ b/index.html
@@ -2873,6 +2873,10 @@
                     <div class="footer-text">本站内容源自互联网，如有内容侵犯了您的权益，请联系删除相关内容
                         <br/>&copy; Copyright 2023 马浩飞丨导航
                     </div>
+					<div class="footer-text" style="position: relative; top: 6px;">
+                        <script async defer src="https://buttons.github.io/buttons.js"></script>
+                        <a class="github-button" href="https://github.com/HaofeiMa/navigation" data-show-count="true" aria-label="Star HaofeiMa/navigation on GitHub">Github</a>
+                    </div>
                 </div>
             </footer>
         </div><!-- main-content end -->
