--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 					</div>
 					<div class="footer-inner" style="text-align: center;">
 						<div class="footer-text">本站内容源自互联网，如有内容侵犯了您的权益，请联系删除相关内容
-							<br/><div title="马浩飞丨导航 V0.11.01">&copy; Copyright 2023 马浩飞丨导航</div>
+							<br/>&copy; Copyright 2023 马浩飞丨导航 V0.11.01
 						</div>
 						<div class="footer-text" style="position: relative; top: 6px;">
 							<script async defer src="https://buttons.github.io/buttons.js"></script>
