--- a/index.html
+++ b/index.html
@@ -669,10 +669,12 @@
                             <div class="bulletin mx-1 mx-md-2 carousel-vertical">
                                 <div class="carousel slide" data-ride="carousel" data-interval="3000">
                                     <div class="carousel-inner" role="listbox">
-                                        <div class="carousel-item active"><a class="overflowClip_1" href="https://mail.qq.com/" target="_blank">马浩飞丨导航 -
+                                        <!-- <div class="carousel-item active"><a class="overflowClip_1" href="https://mail.qq.com/" target="_blank">马浩飞丨导航 -
                                             Infinite Advancing</a></div>
                                         <div class="carousel-item "><a class="overflowClip_1" href="https://mail.qq.com/" target="_blank">马浩飞丨导航 -
-                                            进步无止境</a></div>
+                                            进步无止境</a></div> -->
+										<div class="carousel-item active">马浩飞丨导航 - Infinite Advancing</div>
+                                        <div class="carousel-item ">马浩飞丨导航 - 进步无止境</div>
                                     </div>
                                 </div>
                             </div>
