--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
 <!-- Web of Science 收录 -->
 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
 <div class="url-body default">
-<a class="card no-c mb-4 site-1" data-id="1" data-placement="bottom" data-toggle="tooltip" data-url="https://mjl.clarivate.com/search-results" href="https://mjl.clarivate.com/search-results" target="_blank" title="检索某期刊的SCI收录情况">
+<a class="card no-c mb-4 site-1" data-id="1" data-placement="bottom" data-toggle="tooltip" data-url="https://mjl.clarivate.com/search-results" href="https://mjl.clarivate.com/search-results" target="_blank" title="检索期刊SCI收录与JCR分区">
 <div class="card-body">
 <div class="url-content d-flex align-items-center">
 <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
@@ -1076,7 +1076,7 @@
 <div class="text-sm overflowClip_1">
 <strong>Web of Science 收录</strong>
 </div>
-<p class="overflowClip_1 m-0 text-muted text-xs">检索某期刊的SCI收录情况</p>
+<p class="overflowClip_1 m-0 text-muted text-xs">检索期刊SCI收录与JCR分区</p>
 </div>
 </div>
 </div>
@@ -1084,10 +1084,52 @@
 <a class="togo text-center text-muted is-views" data-id="1" data-placement="right" data-toggle="tooltip" href="https://mjl.clarivate.com/search-results" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
+<!-- 中国科学院期刊分区表 -->
+<div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
+<div class="url-body default">
+<a class="card no-c mb-4 site-2" data-id="2" data-placement="bottom" data-toggle="tooltip" data-url="https://advanced.fenqubiao.com/" href="https://advanced.fenqubiao.com/" target="_blank" title="检索期刊中科院分区">
+<div class="card-body">
+<div class="url-content d-flex align-items-center">
+<div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+<img alt="中国科学院期刊分区表" class="lazy" data-src="assets/site/文献检索/信息/中国科学院期刊分区表.png" onerror="javascript:this.src='assets/site/文献检索/信息/中国科学院期刊分区表.png'" src="assets/site/文献检索/信息/中国科学院期刊分区表.png"/>
+</div>
+<div class="url-info flex-fill">
+<div class="text-sm overflowClip_1">
+<strong>中国科学院期刊分区表</strong>
+</div>
+<p class="overflowClip_1 m-0 text-muted text-xs">检索期刊中科院分区</p>
+</div>
+</div>
+</div>
+</a>
+<a class="togo text-center text-muted is-views" data-id="2" data-placement="right" data-toggle="tooltip" href="https://advanced.fenqubiao.com/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+</div>
+</div>
+<!-- 中国计算机协会 -->
+<div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
+<div class="url-body default">
+<a class="card no-c mb-4 site-3" data-id="3" data-placement="bottom" data-toggle="tooltip" data-url="https://www.ccf.org.cn/" href="https://www.ccf.org.cn/" target="_blank" title="检索CCF会议等级">
+<div class="card-body">
+<div class="url-content d-flex align-items-center">
+<div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+<img alt="中国计算机协会" class="lazy" data-src="assets/site/文献检索/信息/中国计算机协会.png" onerror="javascript:this.src='assets/site/文献检索/信息/中国计算机协会.png'" src="assets/site/文献检索/信息/中国计算机协会.png"/>
+</div>
+<div class="url-info flex-fill">
+<div class="text-sm overflowClip_1">
+<strong>中国计算机协会</strong>
+</div>
+<p class="overflowClip_1 m-0 text-muted text-xs">检索CCF会议等级</p>
+</div>
+</div>
+</div>
+</a>
+<a class="togo text-center text-muted is-views" data-id="3" data-placement="right" data-toggle="tooltip" href="https://www.ccf.org.cn/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+</div>
+</div>
 <!-- Justscience -->
 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
 <div class="url-body default">
-<a class="card no-c mb-4 site-2" data-id="2" data-placement="bottom" data-toggle="tooltip" data-url="https://sci.justscience.cn/" href="https://sci.justscience.cn/" target="_blank" title="期刊信息检索平台">
+<a class="card no-c mb-4 site-4" data-id="4" data-placement="bottom" data-toggle="tooltip" data-url="https://sci.justscience.cn/" href="https://sci.justscience.cn/" target="_blank" title="期刊信息检索平台">
 <div class="card-body">
 <div class="url-content d-flex align-items-center">
 <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
@@ -1102,13 +1144,13 @@
 </div>
 </div>
 </a>
-<a class="togo text-center text-muted is-views" data-id="2" data-placement="right" data-toggle="tooltip" href="https://sci.justscience.cn/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+<a class="togo text-center text-muted is-views" data-id="4" data-placement="right" data-toggle="tooltip" href="https://sci.justscience.cn/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
 <!-- LetPub -->
 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
 <div class="url-body default">
-<a class="card no-c mb-4 site-3" data-id="3" data-placement="bottom" data-toggle="tooltip" data-url="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" href="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" target="_blank" title="学术期刊和论文投稿助手">
+<a class="card no-c mb-4 site-5" data-id="5" data-placement="bottom" data-toggle="tooltip" data-url="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" href="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" target="_blank" title="学术期刊和论文投稿助手">
 <div class="card-body">
 <div class="url-content d-flex align-items-center">
 <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
@@ -1123,13 +1165,13 @@
 </div>
 </div>
 </a>
-<a class="togo text-center text-muted is-views" data-id="3" data-placement="right" data-toggle="tooltip" href="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+<a class="togo text-center text-muted is-views" data-id="5" data-placement="right" data-toggle="tooltip" href="http://www.letpub.com.cn/index.php?page=journalapp&amp;view=search" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
 <!-- 小木虫 -->
 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
 <div class="url-body default">
-<a class="card no-c mb-4 site-4" data-id="4" data-placement="bottom" data-toggle="tooltip" data-url="http://muchong.com/bbs/journal.php" href="http://muchong.com/bbs/journal.php" target="_blank" title="学术论坛与资源共享平台">
+<a class="card no-c mb-4 site-6" data-id="6" data-placement="bottom" data-toggle="tooltip" data-url="http://muchong.com/bbs/journal.php" href="http://muchong.com/bbs/journal.php" target="_blank" title="学术论坛与资源共享平台">
 <div class="card-body">
 <div class="url-content d-flex align-items-center">
 <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
@@ -1144,13 +1186,13 @@
 </div>
 </div>
 </a>
-<a class="togo text-center text-muted is-views" data-id="4" data-placement="right" data-toggle="tooltip" href="http://muchong.com/bbs/journal.php" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+<a class="togo text-center text-muted is-views" data-id="6" data-placement="right" data-toggle="tooltip" href="http://muchong.com/bbs/journal.php" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
 <!-- 爱科学 -->
 <div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
 <div class="url-body default">
-<a class="card no-c mb-4 site-5" data-id="5" data-placement="bottom" data-toggle="tooltip" data-url="https://www.iikx.com/" href="https://www.iikx.com/" target="_blank" title="科技资讯和科研资源聚合">
+<a class="card no-c mb-4 site-7" data-id="7" data-placement="bottom" data-toggle="tooltip" data-url="https://www.iikx.com/" href="https://www.iikx.com/" target="_blank" title="科技资讯和科研资源聚合">
 <div class="card-body">
 <div class="url-content d-flex align-items-center">
 <div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
@@ -1165,28 +1207,7 @@
 </div>
 </div>
 </a>
-<a class="togo text-center text-muted is-views" data-id="5" data-placement="right" data-toggle="tooltip" href="https://www.iikx.com/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
-</div>
-</div>
-<!-- 中国计算机协会 -->
-<div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
-<div class="url-body default">
-<a class="card no-c mb-4 site-6" data-id="6" data-placement="bottom" data-toggle="tooltip" data-url="https://www.ccf.org.cn/" href="https://www.ccf.org.cn/" target="_blank" title="CCF会议等级查询">
-<div class="card-body">
-<div class="url-content d-flex align-items-center">
-<div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
-<img alt="中国计算机协会" class="lazy" data-src="assets/site/文献检索/信息/中国计算机协会.png" onerror="javascript:this.src='assets/site/文献检索/信息/中国计算机协会.png'" src="assets/site/文献检索/信息/中国计算机协会.png"/>
-</div>
-<div class="url-info flex-fill">
-<div class="text-sm overflowClip_1">
-<strong>中国计算机协会</strong>
-</div>
-<p class="overflowClip_1 m-0 text-muted text-xs">CCF会议等级查询</p>
-</div>
-</div>
-</div>
-</a>
-<a class="togo text-center text-muted is-views" data-id="6" data-placement="right" data-toggle="tooltip" href="https://www.ccf.org.cn/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+<a class="togo text-center text-muted is-views" data-id="7" data-placement="right" data-toggle="tooltip" href="https://www.iikx.com/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
 </div><!--
@@ -2275,7 +2296,7 @@
 </div>
 <div class="footer-inner" style="text-align: center;">
 <div class="footer-text">本站内容源自互联网，如有内容侵犯了您的权益，请联系删除相关内容
-							<br/>© Copyright 2023 马浩飞丨导航 V0.12.01
+							<br/>© Copyright 2023 马浩飞丨导航
 						</div>
 <div class="footer-text" style="position: relative; top: 6px;">
 <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
