--- a/index.html
+++ b/index.html
@@ -1687,6 +1687,27 @@
 <a class="togo text-center text-muted is-views" data-id="10" data-placement="right" data-toggle="tooltip" href="https://chatgpt.mahaofei.com/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
 </div>
 </div>
+<!-- Pandora -->
+<div class="url-card col-6 col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
+<div class="url-body default">
+<a class="card no-c mb-4 site-11" data-id="11" data-placement="bottom" data-toggle="tooltip" data-url="https://chat-shared3.zhile.io/" href="https://chat-shared3.zhile.io/" target="_blank" title="国内代理GPT网页">
+<div class="card-body">
+<div class="url-content d-flex align-items-center">
+<div class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+<img alt="Pandora" class="lazy" data-src="assets/site/AI模型/Pandora.png" onerror="javascript:this.src='assets/site/AI模型/Pandora.png'" src="assets/site/AI模型/Pandora.png"/>
+</div>
+<div class="url-info flex-fill">
+<div class="text-sm overflowClip_1">
+<strong>Pandora</strong>
+</div>
+<p class="overflowClip_1 m-0 text-muted text-xs">国内代理GPT网页</p>
+</div>
+</div>
+</div>
+</a>
+<a class="togo text-center text-muted is-views" data-id="11" data-placement="right" data-toggle="tooltip" href="https://chat-shared3.zhile.io/" rel="nofollow" title="直达"><i class="iconfont icon-goto"></i></a>
+</div>
+</div>
 </div><!--
 		在线工具 · 工具
 	-->
